Alteração do título do projeto para: The Dev News; criação da tag <main>, contendo a tag <h1> e a tag <body>

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Dev News</title>
 </head>
-<body>
+<main>
+    <h1 id="Blog-title" class="background-green">The Dev News</h1>
+    <body>
     
-</body>
+    </body>
+</main>
+
 </html>
