--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <title>The Dev News</title>
 </head>
 <main>
+    <!--Título da Página-->
     <h1 id="Blog-title" class="background-green">The Dev News</h1>
     <body>
-    
+        <section class="First-section">
+
+        </section>
     </body>
 </main>
 
