Criação de comentário; criação da tag <main> contendo as tags <h1> e <body>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Dev News</title>
 </head>
-<body>
+<!--Título da página-->
+<main>
+    <h1>The Dev News</h1>
+   <body>
     
-</body>
+    </body> 
+</main>
+
 </html>
