Criação das tag <section> contendo outra tag <section> que contém uma imagem; criação da pasta (images)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <main>
     <h1>The Dev News</h1>
    <body>
+    <section>
+        <section>
+            <img src="" alt="">
+        </section>
+    </section>
     
     </body> 
 </main>
