--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>The Dev News</title>
 </head>
 <!--Título da página-->
@@ -11,7 +12,7 @@
    <body>
     <section>
         <section>
-            <img src="" alt="">
+            <img src="./images/banner-article.png" alt="">
         </section>
     </section>
     
