Criação de tags id e class para nomear tags; criação de comentário para auxiliar na localização e reparo no alinhamento das tags

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 <!--Título da página-->
 <main>
-    <h1>The Dev News</h1>
+    <h1 id="Blog-title" class="Background-green">The Dev News</h1>
    <body>
-    <section>
-        <section>
-            <img src="./images/banner-article.png" alt="">
+        <section class="First-section">
+<!--Primeiro GRID--> 
+            <section class="Container">
+                <img src="./images/banner-article.png" alt="">
+            </section>
         </section>
-    </section>
     
     </body> 
 </main>
