--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 <!--Primeiro GRID--> 
             <section class="Container">
                 <img src="./images/banner-article.png" alt="">
+<!--Posts Recentes-->                
+                <div id="Post-list">
+                    <h2 id="Posts-title">Posts mais recentes<button>Ver todos</button></h2>
+<!--Grid Post-->                    
+                    <div id="Grid-post"></div>
+                </div>
             </section>
         </section>
     
