Criação da estrutura inicial  da <div> Grid-post e implantação de comentários

--- a/index.html
+++ b/index.html
@@ -21,7 +21,50 @@
                 <div id="Post-list">
                     <h2 id="Posts-title">Posts mais recentes<button>Ver todos</button></h2>
 <!--Grid Post-->                    
-                    <div id="Grid-post"></div>
+                    <div id="Grid-post">
+<!--Primeiro Post-->
+                        <article>
+                            <img src="" alt="">
+                            <header>
+                                <p></p>
+                                <h2></h2>
+                                <p></p>
+                                <p></p>
+                            </header>
+                        </article>
+<!--Segundo Post-->
+                         <article>
+                            <img src="" alt="">
+                            <header>
+                                <p></p>
+                                <h2></h2>
+                                <p></p>
+                                <p></p>
+                            </header>
+                        </article>
+
+<!--Terceiro Post-->    
+                        <article>
+                            <img src="" alt="">
+                            <header>
+                                <p></p>
+                                <h2></h2>
+                                <p></p>
+                                <p></p>
+                            </header>
+                        </article>
+
+<!--Quarto Post-->                
+                        <article>
+                            <img src="" alt="">
+                            <header>
+                                <p></p>
+                                <h2></h2>
+                                <p></p>
+                                <p></p>
+                            </header>
+                        </article>
+                    </div>
                 </div>
             </section>
         </section>
