Criação das tags <article> para cada uma das quatro partes da <div>Grid-post, cada uma contendo as tags: <img>Photo e <header>, em cada tag <header>Text-post que contém as tags: <p>Author/ <p>Argument / <p>Date; Para as tags <article> ímpares foram atribuídas as classes Grid-item e Grid-left/ para as tags pares foram atribuídas as classes Grid-item e Grid-right; para a segunda tag <article> foram aplicadas estilizações direto no arquivo index.html para serem aplicadas de forma mais eficiente

--- a/index.html
+++ b/index.html
@@ -23,45 +23,69 @@
 <!--Grid Post-->                    
                     <div id="Grid-post">
 <!--Primeiro Post-->
-                        <article>
-                            <img src="" alt="">
-                            <header>
-                                <p></p>
-                                <h2></h2>
-                                <p></p>
-                                <p></p>
-                            </header>
+                        <article class="Grid-item Grid-left">
+                        <img class="Photo" src="./Images/banner-image1.png" alt="">
+                        <header class="Text-post">
+                            <p class="Theme"><b>desenvolvimento</b></p>
+                            <h2><b>Desenvolvimento Mobile</b></h2>
+                            <p class="Author"><b>By</b> Fabio Tetsuo</p>
+                            <p class="Argument">
+                                Lorem ipsum dolor sit amet consectetur. In <br>
+                                vitae urna commodo amet congue integer <br>
+                                dapibus. Interdum semper mauris convallis <br>
+                                fusce enim odio. Vitae montes ridiculus felis. <br>
+                            </p>
+                            <p class="Date">22 Agosto 2022</p>
+                        </header>
                         </article>
 <!--Segundo Post-->
-                         <article>
-                            <img src="" alt="">
-                            <header>
-                                <p></p>
-                                <h2></h2>
-                                <p></p>
-                                <p></p>
+                        <article class="Grid-item Grid-right">
+                            <img class="Photo" src="./Images/banner-image2.png" alt="">
+                            <header class="Text-post" style="padding-left: 1rem; width: 18.6rem; padding-right: 1rem;">
+                                <p class="Theme" style="margin-bottom: 0; padding-bottom: 0.5rem;"><b>saude</b></p>
+                                <h2 style="width: 20.5rem; height: 1.8rem; margin-top: 0.5rem; margin-bottom: 0.25rem; padding-bottom: 0.25rem;"><b>Balancear vida profissional e<br>pessoal</b></h2>
+                                <p class="Author" style=" width: 8.75rem; height: 1rem; padding-top: 0.62rem;"><b>By</b> Ridho Satriawan
+                                </p>
+                                <p class="Argument" style="width: 20.5rem; height: 2.12rem;">
+                                    Lorem ipsum dolor sit amet consectetur. Et <br>
+                                    consectetur at consectetur sed nisl tempor.<br>
+                                </p>   
+                                <p class="Date" style=" margin-bottom: 0; margin-top: 0; padding-top: 0.25rem;">22 Agosto 2022</p>
                             </header>
                         </article>
 
 <!--Terceiro Post-->    
-                        <article>
-                            <img src="" alt="">
-                            <header>
-                                <p></p>
-                                <h2></h2>
-                                <p></p>
-                                <p></p>
-                            </header>
+                        <article class="Grid-item Grid-left">
+                            <img class="Photo" src="./Images/banner-image3.png" alt="">
+                            <header class="Text-post">
+                                <p class="Theme"><b>desenvolvimento</b></p>
+                                <h2><b>Configurando VsCode</b></h2>
+                                <p class="Author">
+                                <b>By</b> Fabio Tetsuo</p>
+                                <p class="Argument">
+                                    Lorem ipsum dolor sit amet consectetur. Erat<br>
+                                    interdum tortor ac sagittis id a etiam. Tellus<br>
+                                    vitae arcu dignissim massa aliquam vel tellus.<br>
+                                    Ipsum massa arcu nulla sed purus in ac.<br>
+                                </p>
+                                <p class="Date">22 Agosto 2022</p>
+                            </header>                
                         </article>
-
 <!--Quarto Post-->                
-                        <article>
-                            <img src="" alt="">
-                            <header>
-                                <p></p>
-                                <h2></h2>
-                                <p></p>
-                                <p></p>
+                        <article class="Grid-item Grid-right" style="margin-bottom: 3.1rem;">
+                            <img class="Photo" src="./Images/banner-image4.png" alt="">
+                            <header class="Text-post">
+                                <p class="Theme"><b>produtividade</b></p>
+                                <h2><b>2 monitores ou 1 ultrawide?</b></h2>
+                                <p class="Author"><b>By</b> Fulano da Silva
+                                </p>
+                                <p class="Argument">
+                                    Lorem ipsum dolor sit amet consectetur. Arcu<br>
+                                    tellus adipiscing sagittis tristique. Eget<br>
+                                    molestie posuere enim pretium venenatis<br>
+                                    nunc ligula donec a. Velit senectus amet nulla.<br>
+                                </p>
+                                <p class="Date">22 Agosto 2022</p>
                             </header>
                         </article>
                     </div>
