Correção de erro encontrado na <div> id=Post-list

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section class="Container">
                 <img src="./images/banner-article.png" alt="">
 <!--Posts Recentes-->                
-                <div id="Post-list">
+                <div id="Post-list">s
                     <h2 id="Posts-title">Posts mais recentes<button>Ver todos</button></h2>
 <!--Grid Post-->                    
                     <div id="Grid-post">
