Criação da tag <section> classificada como: Second-container; implantação de comentário; Criação de duas tags contidas na estrutura da <section> Second-container: as tags <h2> identificada como Principal-posts e a <div> identificada como Principal

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
                     </div>
                 </div>
             </section>
+<!--Segundo GRID-->            
+            <section class="Second-container">
+                <div id="Grid-recents">
+                    <h2 id="Principal-posts" class="Background-green">Posts Populares</h2>
+                    <div id="Principal"></div>
+                </div>
+            </section>
         </section>
     
     </body> 
