Criação da estrutura inicial da <div> Principal, contendo 3 tags <article> que contém as tags <img>, <h3 e <p>; no arquivo Style.css, foi trocada a id = Principal-post com a id = Pirncipal para uma melhor organização estrutural

--- a/index.html
+++ b/index.html
@@ -97,6 +97,30 @@
                     <h2 id="Principal-posts" class="Background-green">Posts Populares</h2>
                     <div id="Principal"></div>
                 </div>
+<!--Primeiro Tema-->
+                <article>
+                    <img src="" alt="">
+                    <header>
+                        <h3></h3>
+                        <p></p>
+                    </header>
+                </article>
+<!--Segundo tema-->
+                <article>
+                    <img src="" alt="">
+                    <header>
+                        <h3></h3>
+                        <p></p>
+                    </header>
+                </article>
+<!--Terceiro tema-->
+                <article>
+                    <img src="" alt="">
+                    <header>
+                        <h3></h3>
+                        <p></p>
+                    </header>
+                </article>                                
             </section>
         </section>
     
