Criação da <div> identificada como Categories contendo uma 1 tag <h2> e 4 tags <header>; Criação da tag <footer>; e criação decometários para auxiliar na localização de conteúdos ao longo do projeto

--- a/index.html
+++ b/index.html
@@ -120,8 +120,18 @@
                             <p>22 Agosto 2022</p>
                         </header>
                     </article>                                
-                </div>    
+                </div>
+ <!--Categorias-->
+                <div>
+                    <h2></h2>
+                    <header></header>
+                    <header></header>
+                    <header></header>
+                    <header></header>
+                </div>                   
             </section>
+<!--Rodapé-->
+            <footer></footer>            
         </section>
     
     </body> 
