--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </article>                                
                 </div>
  <!--Categorias-->
-                <div>
+                <div id="Categories">
                     <h2></h2>
                     <header></header>
                     <header></header>
