Estruturação da <div> Categories concluída, inseridas informações nas tags <h2> identificada com Categori e nas 4 tags <heaver> classificadas como Types e dentro de cada uam delas mais duas tags contidas sendo elas: <p> classificada como Option e <p> classificada como Number

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
                 </div>
  <!--Categorias-->
                 <div id="Categories">
-                    <h2></h2>
-                    <header></header>
-                    <header></header>
-                    <header></header>
-                    <header></header>
+                    <h2 id="categori" class="Backgorund-green">Categorias</h2>
+                    <header class="Option"><p>>saude</p><p class="number">(1)</p></header>
+                    <header class="Option"><p>>desenvolvimento</p><p class="number">(2)</p></header>
+                    <header class="Option"><p>>produtividade</p><p class="number">(2)</p></header>
+                    <header class="Option"><p>>opiniao</p><p></p class="number">(1)</header>
                 </div>                   
             </section>
 <!--Rodapé-->
