Inserção de conteúdo e criação da id = Footer-pc

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>                   
             </section>
 <!--Rodapé-->
-            <footer></footer>            
+            <footer id="Footer-pc">Copyright@The Dev News</footer>            
         </section>
     
     </body> 
