Realização de reparos estruturais do projeto

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <header class="Types"><p class="Option">>opiniao</p><p class="Number">(1)</p></header>  
                 </div>       
             </section>
-            <footer id="Footer-mobile" class="background-green"><p>Copyright@The Dev News</p></footer>
+            <footer id="Footer-mobile" class="Background-green"><p>Copyright@The Dev News</p></footer>
         </section>
 <!--Rodapé-->
         <footer id="Footer-pc" class="Background-green"><p>Copyright@The Dev News</p></footer>
